<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Werewolf Mobile</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="new_user_button">Create a New User</string>
    <string name="new_user_label">Create a New Account</string>
    <string name="username_label">Username:</string>
    <string name="password_label">Password:</string>
    <string name="verify_pw_label">Verify password:</string>
    <string name="firstname_label">First name:</string>
    <string name="lastname_label">Last name:</string>
    <string name="newuser_submit_button">Create account</string>
    <string name="login_button">Login</string>
    <string name="login_header_label">Log in to your Werewolf account:</string>
    <string name="register_label">Don\'t have an account?</string>
    <string name="register_button">Register</string>
    <string name="login_label">Log in</string>
    <string name="logged_in_username_label">Unavailable</string>
    <string name="logout_button">Logout</string>
    <string name="hello_label">"Hello, "</string>
    <string name="home_label">"Home"</string>
    <string name="current_status">It is currently day</string>
    <string name="player_ratio">0 werewolves and 0 townspeople are alive.</string>
    <string name="action_button">Vote</string>
    <string name="user_list">Users</string>
    <string name="no_active_game">There is not currently a game running.</string>
    <string name="create_game">Would you like to create one?  Choose a day length and tap "Create Game."</string>
    <string name="hour">Hours</string>
    <string name="minutes">Minutes</string>
    <string name="create_game_button">Create Game</string>
    <string name="get">Get</string>
    <string name="refresh_button">Refresh</string>
    <string name="players_button">Players</string>
    <string name="title_activity_scores">ScoresActivity</string>
    <string name="title_activity_scores_main">ScoresMainActivity</string>
    <string name="highscores_label">High Scores</string>

</resources>
