<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >
    
    <TableRow android:layout_width="fill_parent" >

    <TextView
        android:id="@+id/headerLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_span="2"
        android:layout_weight="1"
        android:text="@string/login_header_label"
        android:textSize="20sp" />

    </TableRow>
    
    <TableRow
        android:id="@+id/UsernameRow"
        android:layout_width="fill_parent"
    	android:layout_height="wrap_content">
    
        <TextView
	        android:id="@+id/usernameLabel"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:text="@string/username_label"
	        android:layout_weight="1"/>

        <EditText
            android:id="@+id/usernameInput"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="text" />

    </TableRow>
    
    <TableRow
        android:id="@+id/PasswordRow"
        android:layout_width="fill_parent"
    	android:layout_height="wrap_content">
    
        <TextView
	        android:id="@+id/passwordLabel"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:text="@string/password_label"
	        android:layout_weight="1"/>

        <EditText
            android:id="@+id/passwordInput"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPassword" />

    </TableRow>

    <TableRow android:layout_width="fill_parent" >

    <Button
        android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_span="2"
        android:layout_weight="1"
        android:text="@string/login_button" />

    </TableRow>
    
    <TableRow android:layout_width="fill_parent" >

    <TextView
        android:id="@+id/errorLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_span="2"
        android:layout_weight="1" />

    </TableRow>
    
        <TableRow android:layout_width="fill_parent" >

    <TextView
        android:id="@+id/registerLabel"
        android:paddingTop="50sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_span="2"
        android:layout_weight="1"
        android:text="@string/register_label"
        android:textSize="20sp" />

    </TableRow>
    
    <TableRow android:layout_width="fill_parent" >

    <Button
        android:id="@+id/registerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_span="2"
        android:text="@string/register_button"
        android:layout_weight="1" />

    </TableRow>
    
</TableLayout>