<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/usernameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/logoutButton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/hello_label"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/loggedInUsernameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/logoutButton"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/usernameLabel"
        android:text="@string/logged_in_username_label"
        android:textSize="15sp" />
    
    <Button
        android:id="@+id/playersButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/imageView1"
        android:layout_toLeftOf="@+id/logoutButton"
        android:text="@string/players_button"
        android:textSize="15sp" />

    <Button
        android:id="@+id/logoutButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:text="@string/logout_button"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/gameStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10sp"
        android:text="@string/current_status"
        android:textSize="20sp" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logoutButton"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="15sp"
        android:layout_marginRight="15sp"
        android:layout_marginTop="15sp"
        android:adjustViewBounds="true"
        android:scaleType="centerInside"
        android:src="@drawable/day" />

    <TextView
        android:id="@+id/playerRatio"
        android:layout_marginTop="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/gameStatus"
        android:text="@string/player_ratio" />

    <ProgressBar
        android:id="@+id/progressBar1"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_below="@+id/playerRatio"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10sp"
        android:paddingLeft="15sp"
        android:progress="50" />

    <Button
        android:id="@+id/Button01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toLeftOf="@+id/playersButton"
        android:text="Scores"
        android:textSize="15sp" />

</RelativeLayout>